# WindowQuotePro

./: .gitignore  CMakeLists.txt  README.md
WindowQuotePro/: CMakeLists.txt  DataStore.cpp  DialogHelp.cpp  Page.cpp  QuotesPage.cpp  WindowQuoteProApp.cpp  WindowQuoteProMain.cpp
WindowQuotePro/doc/: README.txt  UserManual.html
WindowQuotePro/include/: DataStore.h  DialogHelp.h  Page.h  QuotesPage.h  WindowQuoteProApp.h  WindowQuoteProMain.h
WindowQuotePro/lib/application/: CMakeLists.txt
WindowQuotePro/lib/application/include/: DialogAbout.h  Page.h  QuotesPage.h  WindowQuoteProMain.h
WindowQuotePro/lib/application/res/: config.ini  database.db
WindowQuotePro/lib/application/src/: DialogAbout.cpp  QuotesPage.cpp  WindowQuoteProMain.cpp
WindowQuotePro/lib/application/tests/: CMakeLists.txt  testDataStore.cpp
WindowQuotePro/res/: Resource.rc  WindowQuotePro.exe.manifest  WindowQuotePro64.exe.manifest  database.db
WindowQuotePro/tests/: CMakeLists.txt  test.cpp
WindowQuotePro/tests/include/: TestsAssist.h
